successfully storing client ipaddress, rollno, result of a square number

--- a/socket_app/Makefile
+++ b/socket_app/Makefile
@@ -1,6 +1,8 @@
 all: server.c client.c
 	gcc -g -o server server.c
-	gcc -g -o client client.c
+	#gcc -g -o client client.c
+	gcc -c client.c
+	gcc -g -o main main.c client.o
 
 clean:
-	rm server client
+	rm server client main client.o
