added feature to pass rollno and result together from client

--- a/socket_app/Makefile
+++ b/socket_app/Makefile
@@ -5,4 +5,4 @@ all: server.c client.c
 	gcc -g -o main main.c client.o
 
 clean:
-	rm server client main client.o
+	rm server main client.o database.txt
